corrected overflow

--- a/src/scss/modules/global/container.scss
+++ b/src/scss/modules/global/container.scss
@@ -8,7 +8,6 @@ $container-paddings: (
 	max-width: 1252px + (map-get($container-paddings, large) * 2);
 	margin: 0 auto;
 	padding: 0 16px;
-	overflow: hidden;
 
 	@each $breakpoint, $padding in $container-paddings {
         @media screen and (min-width: map-get($breakpoints, $breakpoint)) {
