--- a/src/scss/modules/page/layout.scss
+++ b/src/scss/modules/page/layout.scss
@@ -1,4 +1,5 @@
 .page-layout {
     display: flex;
     flex-direction: column;
+	overflow: hidden;
 }
